Bar: fix items alignment for BS5 provider (#6649)

--- a/Source/Blazorise.Bootstrap5/Styles/components/_bar.scss
+++ b/Source/Blazorise.Bootstrap5/Styles/components/_bar.scss
@@ -698,6 +698,7 @@
             text-align: center;
             padding-left: 0px;
             padding-right: 0px;
+            gap: 0 !important;
             font-size: 0;
             border-radius: 0;
             border-bottom: 1px solid var(--b-bar-border-color, var(--bs-border-color, rgba(0, 0, 0, .175)));
@@ -709,8 +710,12 @@
 
             .pe-none {
                 width: 1.25rem;
+                min-width: 1.25rem;
                 margin-right: 0 !important;
                 font-size: 1.25rem;
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
             }
         }
 
